# MemSnapDump

./: AGENTS.md  README.md  README.zh.md  dump.py  entities.py  logger.py  pyproject.toml  simulate.py
.github/workflows/: pr.yml
base/: AGENTS.md  __init__.py  entities.py
docs/en/: getting-started.md
docs/zh/: getting-started.md
simulate/: AGENTS.md  __init__.py  allocator_context.py  allocator_hook_dispatcher.py  hooker_defs.py  range_ops.py  replay_executor.py  simulate.py  simulated_caching_allocator.py  snapshot_mutator.py
src/memsnapdump/: __init__.py  cli.py
test/: AGENTS.md  common.py  simulate_test.py
test/test-data/: snapshot_with_empty_cache.pkl  snapshot_with_empty_cache_expandable.pkl
test/tools_test/: AGENTS.md  slice_dump_test.py  snapshot2db_test.py  snapshot2memscope_test.py  snapshot_db_analyze.py
tests/: common.py  conftest.py
tests/base/: test_entities.py
tests/simulate/: test_allocator_hook_dispatcher.py  test_range_ops.py  test_replay_executor.py  test_simulate.py  test_simulate_extra.py  test_snapshot_lookup.py  test_snapshot_mutator.py  test_snapshot_mutator_edge_cases.py  test_snapshot_mutator_extra.py  test_snapshot_mutator_state.py
tests/tools/: snapshot_db_helper.py  test_cli_entrypoints.py  test_cli_logic.py  test_entity2record.py  test_module_entrypoints.py  test_slice_dump.py  test_slice_dump_hooker_extra.py  test_snapshot2db.py
tests/util/: test_file_util.py  test_logger.py  test_sqlite_meta.py  test_timer.py
tools/: AGENTS.md  dump2db.py  dump2memscope.py  split.py
tools/adaptors/: AGENTS.md  snapshot2db.py  snapshot2memscope.py  snapshot_adaptor.py
tools/slice_dump/: AGENTS.md  dump.py  hooker.py
ut/: AGENTS.md  common.py  test.py
ut/base/: AGENTS.md  test_entities.py
ut/simulate/: AGENTS.md  test.py  test_range_ops.py  (+3 more)
util/: AGENTS.md  __init__.py  file_util.py  logger.py  pickle_util.py  sqlite_meta.py  timer.py
(+54 files in other folders)
