[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memsnapdump"
version = "0.1.0"
description = "Memory snapshot analysis and replay tools for torch / torch_npu snapshots"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
addopts = "-ra"

[tool.coverage.run]
source = ["memsnapdump"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
