[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memsnapdump"
version = "0.1.0"
description = "Memory snapshot analysis and replay tools for torch / torch_npu snapshots"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.11",
  "black>=24.0",
]

[project.scripts]
memsnapdump = "memsnapdump.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
addopts = "-ra"

[tool.coverage.run]
source = ["memsnapdump"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 85

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.black]
line-length = 88
target-version = ["py310"]
